# gkd

./: .eslintrc.js  .gitignore  LICENSE  README.md  cli.js  gkd.js  lerna.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
.changeset/: beige-boxes-carry.md  blue-bikes-draw.md  chatty-toys-pretend.md  config.json  grumpy-peaches-float.md  proud-meals-pretend.md  quick-bulldogs-complain.md  rude-wolves-tell.md  twelve-rice-enjoy.md  violet-moose-search.md
src/: cli.js  gkd.js  utils.js
src/utils/: io.js  io.ts  log.js  validator.js  validator.ts
templates/common/: LICENSE
templates/cpp-library-cpm/: CMakeLists.txt  Makefile
templates/cpp11-cmake/: CMakeLists.txt
templates/react-native-UI-component/android/: build.gradle
templates/react-ts-snowpack-hmr/: package.json  snowpack.config.js  tsconfig.json
templates/react-ts-snowpack-hmr/public/: index.html
templates/react-ts-snowpack-hmr/src/: App.tsx
templates/react-ts-snowpack-hmr/src/typings/: import.d.ts  static.d.ts
templates/react-ts-vite/: package.json  tsconfig.json
templates/react-ts-vite/src/: App.tsx
templates/react-ts-webpack/: package.json
templates/react-ts-webpack-template/src/: index.tsx
templates/react-ts-webpack/config/: webpack.common.js  webpack.dev.js  webpack.prod.js
templates/react-ts-webpack/public/: index.html
templates/react-ts-webpack/src/: App.tsx
templates/vanilla-js-webpack/: package.json
templates/vanilla-js-webpack/config/: webpack.common.js  webpack.dev.js  webpack.prod.js
templates/vanilla-js-webpack/src/: index.js
templates/vercel-serverless/: package.json
